# lib8080

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  Makefile  README.md  api.md  integrationtest.sh
src/: cpu.c  cpu.h  defs.h  i8080.c  i8080.h  main.c  memory.c  memory.h
test/: add_test.c  ana_test.c  attounit.h  dcr_test.c  inr_test.c  mov_test.c  mvi_test.c  nop_test.c  ora_test.c  ral_test.c  rar_test.c  rlc_test.c  rrc_test.c  sub_test.c
test/cpu/: adc_test.c  add_test.c  ana_test.c  calls_test.c  carry_bit.c  cma_test.c  cmc_test.c  cmp_test.c  cpu_test_helpers.c  cpu_test_helpers.h  daa_test.c  dad_test.c  data_transfer.c  dcr_test.c  dcx_test.c  direct_test.c  immediate_test.c  inr_test.c  interrupt_instruction_test.c  interrupt_test.c  inx_test.c  jmp_test.c  jumps_test.c  lda_test.c  ldax_test.c  ldhd_test.c  lxi_test.c  mov_test.c  mvi_test.c  nop_test.c  ora_test.c  pop_test.c  push_test.c  ral_test.c  rar_test.c  register_pair_test.c  returns_test.c  rlc_test.c  rotate_test.c  rrc_test.c  (+10 more)
test/integration/: binloader.c  cpmloader.c
test/integration/test_bins/output/: 8080EXM.COM.out  8080PRE.COM.out  CPUTEST.COM.out  TEST.COM.out
test/unit/: cpu_test_helpers.c
test/unit/cpu/: adc_test.c  add_test.c  ana_test.c  calls_test.c  carry_bit.c  cma_test.c  cmp_test.c  cpu_test_helpers.c  cpu_test_helpers.h  daa_test.c  data_transfer.c  dcr_test.c  direct_test.c  immediate_test.c  inr_test.c  interrupt_instruction_test.c  interrupt_test.c  jumps_test.c  nop_test.c  ora_test.c  register_pair_test.c  returns_test.c  rotate_test.c  sbb_test.c  sub_test.c  xra_test.c
test/unit/cpu/instructions/: adc_test.c  ana_test.c  carry_bit.c  cma_test.c  daa_test.c  data_transfer.c  dcr_test.c  direct_test.c  immediate_test.c  interrupt_instruction_test.c  nop_test.c  register_pair_test.c  returns_test.c  rotate_test.c  sub_test.c  xra_test.c
test/unit/cpu/misc/: flags_test.c  interrupt_test.c  reset_cpu_test.c  stack_ops_test.c
test/unit/instructions/: adc_test.c  add_test.c  ana_test.c  calls_test.c  carry_bit.c  cma_test.c  cmp_test.c  daa_test.c  data_transfer.c  dcr_test.c  direct_test.c  immediate_test.c  inr_test.c  interrupt_instruction_test.c  io_test.c  jumps_test.c  nop_test.c  ora_test.c  register_pair_test.c  returns_test.c  rotate_test.c  sbb_test.c  sub_test.c  xra_test.c
test/unit/misc/: flags_test.c  interrupt_test.c  io_hooking_test.c  memory_test.c  reset_cpu_test.c  stack_ops_test.c
